# cpp-gtest-dev

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  calculator.cc  calculator.h
test/: CMakeLists.txt  test_calculator.cc
